# SwayNotificationCenter

./: .clang-format  .editorconfig  .gitignore  .uncrustify.cfg  .vala-lint.conf  MPRIS-CUSTOMIZATION.md  PKGBUILD  PKGBUILD-git  README.md  TESTING-GUIDE.md  flake.nix  meson.build  meson_options.txt  mpris-config-example.json  org.erikreider.sway-notification-center.json  swaync.rpkg.spec  test-mpris-configs.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: PKGBUILD-build.yml  PKGBUILD-buildd.yml  PKGBUILD-builds.yml  arch-build.yml  building.yml  fedora-build.yml  fedora-copr.yml  linting.yml  ubuntu-build.yml
Dockerfiles/: archlinux  ubuntu
build-aux/meson/: postinstall.py
build-scripts/: .gitignore  PKGBUILD  PKGBUILD-git  swaync-git.rpkg.spec  swaync.rpkg.spec
completions/bash/: swaync  swaync-client
completions/fish/: swaync-client.fish  swaync.fish
completions/zsh/: _swaync  _swaync-client
contrib/: fedora-container-build.sh
data/: meson.build  org.erikreider.sway-notification-center.appdata.xml.in  org.erikreider.sway-notification-center.desktop.in  org.erikreider.sway-notification-center.gschema.xml  org.erikreider.swaync.gschema.xml  sway_notification_center.gresource.xml
data/icons/: meson.build  swaync_icons.gresource.xml
data/style/: meson.build  pre-gtk4-variables.scss  style.scss
data/style/widgets/: backlight.scss  buttons.scss  calendar.scss  dnd.scss  inhibitors.scss  label.scss  menubar.scss  mpris.scss  slider.scss  title.scss  todo.scss  volume.scss
data/ui/: control_center.blp  mpris_player.blp  notification.blp  notification_window.blp  notifications_widget.blp
man/: swaync-client.1.scd  swaync.1.scd  swaync.5.scd
po/: POTFILES  meson.build
protocols/: ext-background-effect-v1.vapi  ext-background-effect-v1.xml  meson.build  xdg-activation-v1.deps  xdg-activation-v1.vapi
services/dbus/: org.erikreider.swaync.cc.service.in  org.erikreider.swaync.service.in
services/systemd/: swaync.service.in
src/: background_effect.vala  client.vala  config.json  config.json.in  configSchema.json  constants.vala  constants.vala.in  functions.vala  main.vala  meson.build  style.css  sway_notification_center.gresource.xml  sway_notificaton_center.gresource.xml  swaync_template.gresource.xml  xdg_activation.vala
src/WaylandUtils/: WaylandUtils.c  WaylandUtils.vala
src/animatedList/: animatedList.vala  animatedListItem.vala
src/animation/: animation.vala
src/blankWindow/: blankWindow.vala
src/cacher/: cacher.vala
src/ccDaemon/: ccDaemon.vala
src/configModel/: configModel.vala
src/controlCenter/: controlCenter.ui  controlCenter.vala
src/controlCenter/topAction/: topAction.ui  topAction.vala
src/controlCenter/widgets/: baseWidget.vala  factory.vala
src/controlCenter/widgets/backlight/: backlight.vala  backlightUtil.vala
src/controlCenter/widgets/brightness/: brightness.vala  brightnessUtil.vala
src/controlCenter/widgets/buttons/: buttons.vala
src/controlCenter/widgets/buttonsGrid/: buttonsGrid.vala
src/controlCenter/widgets/calendar/: calendar.vala
src/controlCenter/widgets/controllsWidget/: controllsWidget.vala
src/controlCenter/widgets/dnd/: dnd.vala
src/controlCenter/widgets/inhibitors/: inhibitors.vala
src/controlCenter/widgets/label/: label.vala
src/controlCenter/widgets/menubar/: menubar.vala
src/controlCenter/widgets/mpris/: interfaces.vala  mpris.vala  mpris_player.ui  mpris_player.vala
src/controlCenter/widgets/notifications/: notifications.vala
src/controlCenter/widgets/powermenu/: powermenu.vala
src/controlCenter/widgets/pulseVolume/: pulseDaemon.vala  pulseDevice.vala  pulseVolume.vala
src/controlCenter/widgets/shared/: toggleButton.vala
src/controlCenter/widgets/slider/: slider.vala
src/controlCenter/widgets/title/: title.vala
src/controlCenter/widgets/todo/: todo.vala  todo_item.ui  todo_item.vala
src/controlCenter/widgets/volume/: pulseDaemon.vala  pulseDevice.vala  pulseSinkInput.vala  sinkInputRow.vala  volume.vala
src/customWidgets/: blankWindow.vala  dismissibleWidget.vala  iterBox.vala  scaledImage.vala
src/dismissableWidget/: dismissableWidget.vala
src/emptyWindow/: emptyWindow.vala
src/fadedViewport/: fadedViewport.vala
src/iterHelpers/: iterBox.vala  iterListBoxController.vala
src/notiDaemon/: notiDaemon.vala
src/notiModel/: notiModel.vala
src/notiWindow/: notiWindow.ui  notiWindow.vala
src/notification/: notification.ui  notification.vala  notificationContent.vala
src/notificationCloseButton/: notificationCloseButton.vala
src/notificationGroup/: expandableGroup.vala  notificationGroup.vala
src/notificationWindow/: notificationWindow.ui  notificationWindow.vala
src/orderedHashTable/: orderedHashTable.vala
src/swayncDaemon/: swayncDaemon.vala
src/templates/: SwayNotificationCenter.cmb  notificationContent.ui
src/tests/: config_test.json  tests.vala
src/underlay/: underlay.vala
src/window/: window.vala
